# standalone-charts

./: README.md  pyproject.toml
output/: dac_aid_to_africa.csv  dac_countries_aid_to_africa.csv  dac_countries_aid_to_dev_countries.csv  dac_gni_2023_constant.csv  g7_aid_to_africa.csv  g7_eui_africa_share.csv  official_aid_to_africa.csv
scripts/: __init__.py  config.py
scripts/oda_charts/: aid_to_africa.py  aid_to_dev_countries.py  common.py  g7_plus_eui_share.py
